--- a/app.yaml
+++ b/app.yaml
@@ -1,17 +1,17 @@
-runtime: python
-env: flex
-entrypoint: gunicorn -b :$PORT main:app
+# [START runtime]
+runtime: python27
+threadsafe: yes
+# [END runtime]
 
-runtime_config:
-  python_version: 3
+handlers:
 
-# This sample incurs costs to run on the App Engine flexible environment. 
-# The settings below are to reduce costs during testing and are not appropriate
-# for production use. For more information, see:
-# https://cloud.google.com/appengine/docs/flexible/python/configuring-your-app-with-app-yaml
-manual_scaling:
-  instances: 1
-resources:
-  cpu: 1
-  memory_gb: 0.5
-  disk_size_gb: 10
+- url: /(.+)
+  static_files: dist/\1
+  upload: dist/(.*)
+
+- url: /
+  static_files: dist/index.html
+  upload: dist/index.html
+
+skip_files:
+- ^(?!dist)  # Skip any files not in the dist folder
